--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "firebase": "^9.6.7",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
