--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^4.0.8",
+    "@mantine/hooks": "^4.0.8",
+    "@mantine/next": "^4.0.8",
     "eslint-plugin-react-hooks": "^4.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
