--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mantine/core": "^4.0.8",
     "@mantine/hooks": "^4.0.8",
     "@mantine/next": "^4.0.8",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
