--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/hooks": "^4.0.8",
     "@mantine/next": "^4.0.8",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -25,7 +26,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-tailwindcss": "^3.4.4",
     "postcss": "^8.4.6",
