--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tabler-icons-react": "^1.42.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.17",
