--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@mantine/core": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@mantine/next": "^4.1.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "firebase": "^9.6.7",
     "next": "12.0.10",
