--- a/package.json
+++ b/package.json
@@ -17,18 +17,15 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^5.0.3"
+    "react-firebase-hooks": "^5.0.3",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.9.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
