--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.19",
     "typescript": "^4.5.5"
   }
