--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "@mantine/core": "^4.1.3",
+    "@mantine/form": "^4.2.6",
     "@mantine/hooks": "^4.1.3",
     "@mantine/next": "^4.1.3",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -18,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
